# mantos

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
mantos/: app.py  database.py  models.py  schemas.py  utils.py
mantos/routers/: club.py
mantos_api/: app.py
mantos_api/extensions/: database.py  migrator.py
migrations/: env.py
migrations/versions/: 749cef97e5ae_create_club_table_and_jersey_table.py  b37aff1c9c89_eu_quero_tudo_de_novo.py  e70475dfadbf_alter_len_fields.py
tests/: conftest.py  test_app.py  test_club.py
